<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        app:cardElevation="15dp"
        app:contentPadding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvQuestionTitle"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/default_question_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/posted_by_text"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQuestionTitle" />

            <TextView
                android:id="@+id/tvOpName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/default_user_name"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.538" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/posted_on_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvPostDate"
                app:layout_constraintTop_toBottomOf="@+id/tvOpName"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvPostDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_post_date"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toStartOf="@+id/tvOpName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <ImageView
                    android:id="@+id/iOpImage"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/author_image_description"
                    android:src="@drawable/user_icon" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>